SERVER-14032 verify _id present for upserts to multiple config servers